Initial steps toward building under Java 11.
Specify automatic-module-name but don't add module-info file yet.
Switch to GeoTools 21 and new org.locationtech package for JTS classes.
This still does not compile because dependencies are using the old JTS
package name.
Use Java11-ready kryo-tools release.
Allow reflection of Java internals, but only during testing.
Bump Maven plugin versions.